# RPI_Pico_W_Tracker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  pico_sdk_import.cmake
Sim7670G/: CMakeLists.txt  sim7670g.cpp  sim7670g.h
TelegramBot/: CMakeLists.txt  TelegramBot.cpp  TelegramBot.h
